# aihk-prototype-1

./: .gitignore  Cargo.toml  LICENSE  README.md  devp.sh  prod.sh  prodd.sh
common/: Cargo.toml
common/src/: inputs.rs  lib.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/common/: all.html  index.html  sidebar-items.js  struct.Comment.html  struct.Post.html  struct.Session.html  struct.User.html
doc/common/inputs/: index.html  sidebar-items.js  struct.InputComment.html
doc/frontend/: all.html  fn.get_document.html  fn.get_input.html  fn.set_text.html  fn.set_text_str.html  index.html  sidebar-items.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/serde/de/: trait.Deserialize.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/sqlx_core/from_row/: trait.FromRow.js
doc/server/: all.html  fn.verify_auth.html  index.html  sidebar-items.js  struct.DBComment.html  struct.DBPost.html  struct.DBSession.html  struct.DBUser.html  trait.FromDBComment.html  trait.FromDBPost.html
doc/src/common/: inputs.rs.html  lib.rs.html
doc/src/frontend/: lib.rs.html
doc/src/server/: lib.rs.html
frontend/: Cargo.toml  build.rs  index.html  styles.css  tailwind.css
frontend/src/: lib.rs  main.rs
server/: Cargo.toml  test.py
server/src/: db.rs  lib.rs  main.rs  routes.rs
server/src/routes/: add_comment.rs  create_account.rs  get_posts.rs  login.rs  submit_post.rs  validate_session.rs
