[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# utils
gloo-net = "0.4"
gloo-storage = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }

log = "0.4.17"
console_error_panic_hook = "0.1.7"

rustrict = "0.7.12"
chrono = "0.4.31"
common = { path = "../common" }

serde = "1.0.189"
serde_json = "1.0.107"

# wasm
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"

# yew
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "HtmlInputElement",
    "Document",
    "Element",
]
