[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util crates
anyhow = "1.0.75"
chrono = "0.4.31"
common = { path = "../common" }
rustrict = "0.7.12"

argon2 = "0.5.2"
rand = "0.8.5"

clap = { version = "4.0.32", features = ["derive"] }
serde = "1.0.189"

# specific crates
pyo3 = "0.20.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "macros", "sqlite"] }

# runtimes
axum = { version = "0.6.2", features = ["headers"] }
tokio = { version = "1.24.1", features = ["full"] }

# web utils
tower = "0.4.13"
tower-http = { version = "0.4", features = ["full"] }

# logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
